fixed alignment issue og readings count and made some css changes in Setup instance link

--- a/src/app/components/core/scheduler/list-schedules/list-schedules.component.css
+++ b/src/app/components/core/scheduler/list-schedules/list-schedules.component.css
@@ -25,7 +25,6 @@
 .ed-btn {
   height: auto;
   opacity: 0.8;
-  font-size: smaller;
 }
 
 .card-header-title {
